add interview profile link

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div><a href="https://leetcode.com/rcthapa1996/" target="_blank"><i class="cib-leetcode"></i>Leetcode</a>
           </div>
           <div><a href="https://github.com/Rcthapa1996" target="_blank"><i class="fa-solid fa-square"></i>CodeSandbox</a></div>
-          <div><a href="https://github.com/Rcthapa1996" target="_blank">
+          <div><a href="https://www.interviewbit.com/profile/ramchandra-thapa" target="_blank">
             <img src="./img/interviewbit.png" width="15px" alt="InterviewBit Logo"
               >InterviewBit</
             ></a>
